updating changes saving chnages made in the project

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <my-app>Loading...</my-app>
+    <food>Loading...</food>
   </body>
 </html>
+
 
